--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
@@ -9,7 +11,6 @@
   },
   "scripts": {
     "dev": "nodemon main.js",
-    "tailwind":"npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --watch"
-  
+    "tailwind": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --watch"
   }
 }
